[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Help/Help.gd" type="Script" id=1]
[ext_resource path="res://Objects/UI/StarsCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Star/star1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "fadeIN"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.450625, 0.277392 ),
"update": 0,
"values": [ Vector2( 0, 32 ), Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.420448 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.6245, 0.450625 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.37841, 0.31864 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, 32 ) ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://HennigarD.otf"

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
extra_spacing_char = 2
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
use_mipmaps = true
extra_spacing_char = 2
font_data = SubResource( 4 )

[node name="Help" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIN = SubResource( 2 )
anims/fadeOut = SubResource( 3 )

[node name="Label" type="Position2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 32 )
z_index = 100
z_as_relative = false

[node name="StarsCounter" parent="Label" instance=ExtResource( 2 )]
visible = false
position = Vector2( -35, -61 )
rotation = 0.0

[node name="LabelShadow" type="Label" parent="Label"]
margin_left = -88.0
margin_top = -166.0
margin_right = 88.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 0.705882 )
text = "Text"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Label"]
margin_left = -88.0
margin_top = -169.0
margin_right = 88.0
margin_bottom = -78.0
custom_fonts/font = SubResource( 5 )
text = "Text"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starcounter" type="Sprite" parent="Label"]
visible = false
position = Vector2( -8.49999, -59.5 )
scale = Vector2( 0.729167, 0.729167 )
texture = ExtResource( 3 )

[node name="CounterShadow" type="Label" parent="Label/starcounter"]
modulate = Color( 0, 0, 0, 0.482353 )
margin_left = 4.79999
margin_top = -14.4
margin_right = 59.8
margin_bottom = 18.6
custom_fonts/font = SubResource( 6 )
text = "x0"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="Label/starcounter"]
margin_left = 4.79999
margin_top = -17.1428
margin_right = 59.8
margin_bottom = 15.8572
custom_fonts/font = SubResource( 6 )
text = "x0"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Help_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Help_body_exited"]
